WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200948
[iOS] REGRESSION (248501): gmail.com images are still not shown on some versions of iPhone iOS13
https://bugs.webkit.org/show_bug.cgi?id=200948
Summary
[iOS] REGRESSION (248501): gmail.com images are still not shown on some versi...
Said Abou-Hallawa
Reported
2019-08-20 15:52:35 PDT
r248501
was very strict about applying the gmail quirk. The user agent quirk is applied only when the iOS is iPhone iOS13.1. We need to relax this restriction for all iPhone iOS versions till the gmail.com bug is fixed.
Attachments
Patch
(1.65 KB, patch)
2019-08-20 15:57 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-08-20 15:57:13 PDT
Created
attachment 376824
[details]
Patch
Said Abou-Hallawa
Comment 2
2019-08-20 16:04:34 PDT
<
rdar://problem/54406271
>
WebKit Commit Bot
Comment 3
2019-08-20 17:54:54 PDT
Comment on
attachment 376824
[details]
Patch Clearing flags on attachment: 376824 Committed
r248928
: <
https://trac.webkit.org/changeset/248928
>
WebKit Commit Bot
Comment 4
2019-08-20 17:54:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug