[iOS] REGRESSION (248501): gmail.com images are still not shown on some versions of iPhone iOS13 https://bugs.webkit.org/show_bug.cgi?id=200948

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2019-08-20
Reviewed by Tim Horton.

Apply the gmail.com quirk for all iPhone iOS versions till the gmail.com
bug is fixed.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformUserAgent const):

Canonical link: https://commits.webkit.org/214679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248928 268f45cc-cd09-0410-ab3c-d52691b4dbfc